# unifiles-mcp

./: .gitignore  AGENTS.md  API_DESIGN.md  API_DESIGN_REVIEW.md  CHANGELOG.md  HISTORY.md  LICENSE  README.md  TRD.md  publish_pypi.bat  pyproject.toml  requirements.txt  setup_env.bat
.cursor/: mcp.json
.cursor/commands/: explain.md  lint-and-format.md  publish-to-pypi.md  update-changelog.md  update-history.md  update-readme.md
.cursor/rules/: code_style.mdc
.cursor/skills/code-quality-check/: SKILL.md
.cursor/skills/windows-powershell-workflow/: SKILL.md
.cursor/skills/write-cursor-command/: SKILL.md
docs/: API.md  PYPI_RELEASE_CHECKLIST.md  README.md
src/unifiles_mcp/: __init__.py  main.py
src/unifiles_mcp/tools/: __init__.py  excel.py  pdf.py  sqlite.py  word.py
src/unifiles_mcp/utils/: __init__.py  async_wrapper.py  validators.py
